syntax = "proto3";
package chain4energy.c4echain.cfeev;

option go_package = "github.com/chain4energy/c4e-chain/x/cfeev/types";

message EnergyTransfer {
  uint64 id = 1;
  uint64 energyTransferOfferId = 2; 
  string chargerId = 3; 
  string ownerAccountAddress = 4; 
  string driverAccountAddress = 5; 
  int32 offeredTariff = 6; 
  TransferStatus status = 7; 
  uint64 collateral = 8;
  int32 energyToTransfer = 9;
  int32 energyTransferred = 10;
  string paidDate = 11;
  
}

enum TransferStatus {
    REQUESTED = 0;
    ONGOING = 1;
    PAID = 2;
    CANCELLED = 3;
}

