syntax = "proto3";
package chain4energy.c4echain.cfeev;

import "gogoproto/gogo.proto";
import "c4echain/cfeev/params.proto";
import "c4echain/cfeev/energy_transfer_offer.proto";
import "c4echain/cfeev/energy_transfer.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/chain4energy/c4e-chain/x/cfeev/types";

// GenesisState defines the cfeev module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated EnergyTransferOffer energy_transfer_offers = 2 [
    (gogoproto.nullable) = false
  ];
  uint64 energy_transfer_offer_count = 3;
  repeated EnergyTransfer energy_transfers = 4 [
    (gogoproto.nullable) = false
  ];
  uint64 energy_transfer_count = 5;
  // this line is used by starport scaffolding # genesis/proto/state
}
